@@ -123,7 +123,7 @@ $html = __FILE__;
 
 sub new {
 #  my $file = __PACKAGE__->comp_root() . '%s' ;
-  my $file = __PACKAGE->html($html => 'html');
+  my $file = __PACKAGE__->html($html => 'html');
 
   -e $file or die "$file does not exist. Therefore cannot load";
 
