@@ -1,3 +1,8 @@
+2006-03-08  metaperl  <metaperl@gmail.com>
+
+	* gave example of how to achieve per-page templating via
+	oop instead of Mason pseudo-objects or tt-esque if-thens 
+
 2006-02-14  metaperl  <metaperl@gmail.com>
 
 	* added well-formedness as a general 4th generation dynamic HTML
